syntax = "proto3";

package discount;
option go_package = "proto";

service Discount {
    rpc Calculate (SearchRequest) returns (SearchResponse);
}

message Product {
    string product_name = 1;
    int32 price = 2;
}

message User {
    string user_id = 1;
    uint64 date_of_birth = 2;
}

message SearchRequest {
    Product product = 1;
    User user = 2;
}

message SearchResponse {
    int32 discount_rate = 1;
    int32 new_price = 2;
}